package com.example.appsar.framework;


//klasa enum - typ wyliczeniowy przypisujący Id obiektom,aby można było rozróżnić je od siebie
public enum ObjectId {

    Player(),
    Block(),
    Flag(),
    Spider(),
    Collectible(),
    Cauldron(),
    Snail()

}
